--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -759,6 +759,14 @@ config MSM_KERNEL_PROTECT_TEST
           read-only.  This test is FATAL whether it passes or fails!
           Success is signaled by a stage-2 fault.
 
+config KERNEL_TEXT_MPU_PROT
+	bool "Enable xpu protection of kernel r/o sections"
+	help
+	  Enables xpu protection of kernel code and read-only data
+	  sections early in boot. Read access is permitted to
+	  all masters; Write access is only permited to the
+	  secure world.
+
 source "drivers/soc/qcom/memshare/Kconfig"
 
 endif # ARCH_MSM
