usb: (dwc3/phy-msm-hsusb) Add USB Extensions for Sony devices
This is extensional code for USB on SoMC boards.
Permits fine configuration of the MSM PHYs.

--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -159,4 +159,12 @@ config USB_LED_TRIG
 	  LEDs and you want to use them as activity indicators for USB host or
 	  gadget.
 
+config SONY_USB_EXTENSIONS
+	bool "SoMC USB Extensions"
+	depends on USB_COMMON
+	help
+	  This option adds extensional code on USB drivers, required for
+	  some SoMC boards.
+	  If unsure, say N.
+
 endif # USB_SUPPORT
