--- a/drivers/gpu/msm_legacy/Kconfig
+++ b/drivers/gpu/msm_legacy/Kconfig
@@ -1,18 +1,5 @@
-choice
-        prompt "Qualcomm Adreno proprietary stack version"
-
-config MSM_KGSL_CURRENT
-        bool "Use bleeding edge KGSL stack"
-        default y
-
-config MSM_KGSL_LEGACY
-        bool "Use legacy QC KGSL stack"
-endchoice
-
-source drivers/gpu/msm_legacy/Kconfig
-
-menu "Qualcomm Adreno proprietary stack"
-        depends on MSM_KGSL_CURRENT
+menu "Qualcomm Adreno proprietary stack (legacy)"
+        depends on MSM_KGSL_LEGACY
 
 config MSM_KGSL
 	tristate "MSM 3D Graphics driver"
