devfreq: msm_adreno_tz: Add legacy governor for legacy KGSL
Current governor has more features than needed and will crash
with legacy KGSL.
Add a legacy msm_adreno_tz that will play nice with the legacy
KGSL code, temporarily needed for some devices.

The choice between legacy or current governor is automatic.

--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -79,6 +79,16 @@ config DEVFREQ_GOV_MSM_ADRENO_TZ
 	  Sets the frequency using a "on-demand" algorithm.
 	  This governor is unlikely to be useful for other devices.
 
+config DEVFREQ_GOV_MSM_ADRENO_TZ_CURRENT
+        bool
+        depends on DEVFREQ_GOV_MSM_ADRENO_TZ && MSM_KGSL_CURRENT
+        default y
+
+config DEVFREQ_GOV_MSM_ADRENO_TZ_LEGACY
+        bool
+        depends on DEVFREQ_GOV_MSM_ADRENO_TZ && MSM_KGSL_LEGACY
+        default y
+
 config MSM_BIMC_BWMON
 	tristate "MSM BIMC Bandwidth monitor hardware"
 	depends on ARCH_MSM
