--- a/arch/arm/boot/dts/qcom/msm8994-kitakami_ivy_generic.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-kitakami_ivy_generic.dtsi
@@ -47,68 +47,30 @@
 	};
 };
 
-&tlmm_pinmux {
-	/* GPIO_39: NC */
-	msm_gpio_39 {
-		qcom,pin-func = <0>;
-		msm_gpio_39_def: default {
-			drive-strength = <2>;
-			bias-disable;
-			output-low;
-		};
+&msm_gpio_93 {
+	config {
+		output-low;
 	};
+};
 
-	/* GPIO_93: NC */
-	msm_gpio_93 {
-		qcom,pin-func = <0>;
-		msm_gpio_93_def: default {
-			drive-strength = <2>;
-			bias-disable;
-			output-low;
-		};
+&msm_gpio_94 {
+	config {
+		output-low;
 	};
+};
 
-	/* GPIO_94: NC */
-	msm_gpio_94 {
-		qcom,pin-func = <0>;
-		msm_gpio_94_def: default {
-			drive-strength = <2>;
-			bias-disable;
-			output-low;
-		};
+&msm_gpio_95 {
+	config {
+		output-low;
 	};
+};
 
-	/* GPIO_95: NC */
-	msm_gpio_95 {
-		qcom,pin-func = <0>;
-		msm_gpio_95_def: default {
-			drive-strength = <2>;
-			bias-disable;
-			output-low;
-		};
-	};
-
-	/* GPIO_96: NC */
-	msm_gpio_96 {
-		qcom,pin-func = <0>;
-		msm_gpio_96_def: default {
-			drive-strength = <2>;
-			bias-disable;
-			output-low;
-		};
-	};
-
-	/* GPIO_102: NC */
-	msm_gpio_102 {
-		qcom,pin-func = <0>;
-		msm_gpio_102_def: default {
-			drive-strength = <2>;
-			bias-disable;
-			output-low;
-		};
+&msm_gpio_96 {
+	config {
+		output-low;
 	};
 };
 
 &somc_pinctrl {
-	pinctrl-2 = <&msm_gpio_49_def &msm_gpio_50_def &msm_gpio_51_def &msm_gpio_121_def &msm_gpio_124_def>;
+	pinctrl-2 = <&msm_gpio_49 &msm_gpio_50 &msm_gpio_51 &msm_gpio_121 &msm_gpio_124>;
 };
