--- a/arch/arm/boot/dts/qcom/msm8994-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-mtp.dtsi
@@ -42,7 +42,7 @@
 	qcom,nonremovable;
 
 	qcom,clk-rates = <400000 20000000 25000000 50000000 100000000 192000000 384000000>;
-	qcom,bus-speed-mode = "HS400_1p8v", "HS200_1p8v", "DDR_1p8v";
+	qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v"; /*HACK: Removed HS400 */
 	qcom,devfreq,freq-table = <50000000 192000000>;
 
 	status = "ok";
