arm: DT: MSM8994: Fix qseecom memory node name
Fix a typo: qsecom => qseecom

--- a/arch/arm/boot/dts/qcom/msm8994-ion.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-ion.dtsi
@@ -41,9 +41,9 @@
 			qcom,ion-heap-type = "DMA";
 		};
 
-		qcom,ion-heap@27 { /* QSECOM HEAP */
+		qcom,ion-heap@27 { /* QSEECOM HEAP */
 			reg = <27>;
-			memory-region = <&qsecom_mem>;
+			memory-region = <&qseecom_mem>;
 			qcom,ion-heap-type = "DMA";
 		};
 
