arm: DT: Kitakami: Remove configuration and disable kernel splash
Kernel splash is faulty. This is probably a bootloader problem
and we don't want to fix the thing in kernel yet.

The real fix will be done once platforms will boot correctly.

--- a/arch/arm/boot/dts/qcom/msm8994-kitakami_common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-kitakami_common.dtsi
@@ -1173,11 +1173,12 @@
 	memory-region = <&fb_mem>;
 
 	/* Kernel splash configuration */
-	qcom,memblock-reserve = <0x03401000 0x2200000>;
-	qcom,memory-reservation-size = <0x1000000>; /* size: 16MB */
-	qcom,mdss-fb-splash-logo-enabled;
+	//qcom,memblock-reserve = <0x03401000 0x2200000>;
+	//qcom,memory-reservation-size = <0x1000000>; /* size: 16MB */
+	//qcom,mdss-fb-splash-logo-enabled;
 	qcom,cont-splash-memory {
-		memory-region = <&cont_splash_mem>;
+		//memory-region = <&cont_splash_mem>;
+		linux,contiguous-region = <&cont_splash_mem>;
 	};
 };
 
