arm: DT: Suzuran: Add platform regulator/lane settings to MDSS
We have platform regulator and lane settings as SoMC properties
in specific dsi panel configuration.
This is not really working fine in kernel 3.18, and then we
anyway have no different regulator or lane setting for each
panel.

The best way is to go the qcom way, defining the settings in
dsi node directly, instead of waiting for panel probe and
reading it as proprietary setting.

--- a/arch/arm/boot/dts/qcom/msm8994-kitakami_suzuran_common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-kitakami_suzuran_common.dtsi
@@ -175,6 +175,13 @@
 
 &mdss_dsi0 {
 	/delete-property/ qcom,platform-enable-gpio;
+
+	qcom,platform-regulator-settings = [03 03 03 00 20 00 01];
+	qcom,platform-lane-config = [02 00 EF 00 20 00 00 01 FF
+				02 00 EF 00 40 00 00 01 FF
+				02 00 EF 40 20 00 00 01 FF
+				02 00 EF 40 00 00 00 01 FF
+				00 00 45 80 00 00 00 01 97];
 };
 
 /{
