arm: DT: Ivy: Set mdss_dsi hw configuration as single dsi
Ivy has single dsi panel!!!

--- a/arch/arm/boot/dts/qcom/msm8994-kitakami_ivy_common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-kitakami_ivy_common.dtsi
@@ -94,6 +94,10 @@
 	};
 };
 
+&mdss_dsi {
+	hw-config = "single_dsi";
+};
+
 &mdss_dsi0 {
 	qcom,dsi-pref-prim-pan = <&dsi_default_gpio_0>;
 	pinctrl-names = "mdss_default", "mdss_sleep";
