arm: DT: MSM8994-gpu: Fix gfx3d_user context bank offset
The gpu-offset value is used to get GPU register addresses
in this context. GPU registers base is located at ctx_ahb+ahb_base.

--- a/arch/arm/boot/dts/qcom/msm8994-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-gpu.dtsi
@@ -199,7 +199,7 @@
 		gfx3d_user: gfx3d_user {
 			compatible = "qcom,smmu-kgsl-cb";
 			label = "gfx3d_user";
-			qcom,gpu-offset = <0x12000>;
+			qcom,gpu-offset = <0x18000>; /* ctx_ahb + ahb_base */
 		};
 	};
 
