tone: add dtb to defconfig
to include the dtb we have to add it to the config

Signed-off-by: Alin Jerpelea <alin.jerpelea@sonymobile.com>

--- a/arch/arm64/configs/aosp_tone_dora_defconfig
+++ b/arch/arm64/configs/aosp_tone_dora_defconfig
@@ -54,6 +54,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_ARM64_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="msm8996-v3.0-pmi8996-tone-dora_generic msm8996-v3-pmi8996-tone-dora_generic"
 CONFIG_CRASH_NOTES=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
