dts: tone: update sai-panel
changes for the new display driver

Signed-off-by: Alin Jerpelea <alin.jerpelea@sonymobile.com>

--- a/arch/arm/boot/dts/qcom/dsi-panel-dora.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-dora.dtsi
@@ -18,8 +18,11 @@
  */
 
 &mdss_mdp {
+       somc,postpwron-no-reset-quirk;
 	dsi_jdi_synaptics_cmd_6: somc,jdi_synaptics_cmd_6_panel {
 		qcom,mdss-dsi-panel-name = "6";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-width = <1080>;
 		qcom,mdss-dsi-panel-height = <1920>;
@@ -91,8 +94,8 @@
 		qcom,mdss-brightness-max-level = <4095>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		somc,qpnp-lab-limit-maximum-current = <200>;
-		somc,qpnp-ibb-limit-maximum-current = <800>;
+		qcom,qpnp-lab-limit-maximum-current = <200>;
+		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
@@ -100,6 +103,7 @@
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
 
+		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <565000 653000>;
 		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 10>, <1 16>, <0 7>, <1 16>;
@@ -390,6 +394,8 @@
 
 	dsi_jdi_synaptics_cmd_7: somc,jdi_synaptics_cmd_7_panel {
 		qcom,mdss-dsi-panel-name = "7";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-width = <1080>;
 		qcom,mdss-dsi-panel-height = <1920>;
@@ -461,8 +467,8 @@
 		qcom,mdss-brightness-max-level = <4095>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		somc,qpnp-lab-limit-maximum-current = <200>;
-		somc,qpnp-ibb-limit-maximum-current = <800>;
+		qcom,qpnp-lab-limit-maximum-current = <200>;
+		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
@@ -470,6 +476,7 @@
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
 
+		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <353000 414000>;
 		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 10>, <1 16>, <0 7>, <1 16>;
@@ -758,6 +765,8 @@
 
 	dsi_sharp_synaptics_cmd_3: somc,sharp_synaptics_cmd_3_panel {
 		qcom,mdss-dsi-panel-name = "3";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-width = <1080>;
 		qcom,mdss-dsi-panel-height = <1920>;
@@ -822,8 +831,8 @@
 		qcom,mdss-brightness-max-level = <4095>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		somc,qpnp-lab-limit-maximum-current = <200>;
-		somc,qpnp-ibb-limit-maximum-current = <800>;
+		qcom,qpnp-lab-limit-maximum-current = <200>;
+		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
@@ -831,6 +840,7 @@
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
 
+		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <1236000 1395000>;
 		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 10>, <1 10>;
@@ -1113,6 +1123,8 @@
 
 	dsi_sharp_synaptics_cmd_9: somc,sharp_synaptics_cmd_9_panel {
 		qcom,mdss-dsi-panel-name = "9";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-width = <1080>;
 		qcom,mdss-dsi-panel-height = <1920>;
@@ -1185,8 +1197,8 @@
 		qcom,mdss-brightness-max-level = <4095>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		somc,qpnp-lab-limit-maximum-current = <200>;
-		somc,qpnp-ibb-limit-maximum-current = <800>;
+		qcom,qpnp-lab-limit-maximum-current = <200>;
+		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
@@ -1194,6 +1206,7 @@
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
 
+		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <0 57000>;
 		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 10>, <1 10>;
@@ -1476,6 +1489,8 @@
 
 	dsi_lgd_synaptics_cmd_8: somc,lgd_synaptics_cmd_8_panel {
 		qcom,mdss-dsi-panel-name = "8";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-width = <1080>;
 		qcom,mdss-dsi-panel-height = <1920>;
@@ -1538,8 +1553,8 @@
 		qcom,mdss-brightness-max-level = <4095>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		somc,qpnp-lab-limit-maximum-current = <200>;
-		somc,qpnp-ibb-limit-maximum-current = <800>;
+		qcom,qpnp-lab-limit-maximum-current = <200>;
+		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
@@ -1547,6 +1562,7 @@
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
 
+		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <215000 256000>;
 		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 1>, <1 10>;
@@ -1829,6 +1845,8 @@
 
 	dsi_auo_synaptics_cmd_4: somc,auo_synaptics_cmd_4_panel {
 		qcom,mdss-dsi-panel-name = "4";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-width = <1080>;
 		qcom,mdss-dsi-panel-height = <1920>;
@@ -1895,8 +1913,8 @@
 		qcom,mdss-brightness-max-level = <4095>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		somc,qpnp-lab-limit-maximum-current = <200>;
-		somc,qpnp-ibb-limit-maximum-current = <800>;
+		qcom,qpnp-lab-limit-maximum-current = <200>;
+		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
@@ -1904,6 +1922,7 @@
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
 
+		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <1087000 1231000>;
 		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 10>, <1 10>;
@@ -2186,6 +2205,8 @@
 
 	dsi_ivy_lgd_novatek_cmd_2: somc,ivy_lgd_novatek_cmd_2_panel {
 		qcom,mdss-dsi-panel-name = "2";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-framerate = <60>;
 		qcom,mdss-dsi-virtual-channel-id = <0>;
@@ -2263,8 +2284,8 @@
 		qcom,mdss-dsi-tx-eot-append;
 		qcom,panel-supply-entries = <&dsi_panel_pwr_supply_hybrid_incell>;
 
-		somc,qpnp-lab-limit-maximum-current = <200>;
-		somc,qpnp-ibb-limit-maximum-current = <800>;
+		qcom,qpnp-lab-limit-maximum-current = <200>;
+		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
@@ -2272,6 +2293,7 @@
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
 
+		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <1420000 1594000>;
 		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 15>, <1 10>, <0 1>, <1 10>;
@@ -2309,6 +2331,8 @@
 
 	dsi_default_panel: somc,default_cmd_panel {
 		qcom,mdss-dsi-panel-name = "Default Panel";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-destination = "display_1";
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
 		qcom,mdss-dsi-panel-width = <1080>;
 		qcom,mdss-dsi-panel-height = <1920>;
@@ -2371,8 +2395,8 @@
 		qcom,mdss-brightness-max-level = <4095>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
 
-		somc,qpnp-lab-limit-maximum-current = <200>;
-		somc,qpnp-ibb-limit-maximum-current = <800>;
+		qcom,qpnp-lab-limit-maximum-current = <200>;
+		qcom,qpnp-ibb-limit-maximum-current = <800>;
 		somc,qpnp-lab-max-precharge-time = <300>;
 		somc,qpnp-lab-soft-start = <800>;
 		somc,qpnp-lab-pull-down-enable;
@@ -2380,6 +2404,7 @@
 		somc,qpnp-ibb-pull-down-enable;
 		somc,qpnp-ibb-full-pull-down;
 
+		somc,lcd-id = <0>;
 		somc,lcd-id-adc = <0 0x7fffffff>;
 		somc,mdss-dsi-master;
 		somc,pw-on-rst-seq = <0 10>, <1 16>, <0 7>, <1 16>;
