mmc: Add UIM2 support and SoMC specific quirks
UIM2 support is for combined MicroSD+SIM Tray, found on SoMC
devices starting from Kitakami platform.
Other quirks are for not only performance issues, but also
supporting eMMCs used by SoMC on their boards: some of them
don't support clock scaling and/or manual cache disable and/or
full MMC powerdown and/or require different wait times for
suspend and resume operation.

Without those changes, some boards will have severe eMMC failures,
including (and not limited to) data corruption because of bad
command RX from card that may (as already seen) even lead to
bootloader partition corruption and subsequent device permanent brick.

--- a/drivers/mmc/core/Kconfig
+++ b/drivers/mmc/core/Kconfig
@@ -26,3 +26,19 @@ config MMC_PARANOID_SD_INIT
 	  about re-trying SD init requests. This can be a useful
 	  work-around for buggy controllers and hardware. Enable
 	  if you are experiencing issues with SD detection.
+
+config MMC_UIM2TRAY_SUPPORT
+	bool "Enable support for UIM2 Tray"
+	help
+	  Enable support for UIM2 GPIOs. This functionality is
+	  required for SoMC boards which have SDCard in the same
+	  tray as SIM slot. On those boards, Card Detect GPIO is
+	  shared with tray status for also recognizing SIM card
+	  insertion.
+
+config MMC_DISABLE_SD_SDR104
+	bool "Disable SD card speed bus mode SDR104"
+	default y
+	help
+	  If you say N here, the SD layer uses a speed bus mode
+	  of SDR104.
