--- a/arch/arm64/configs/aosp_tone_kagura_defconfig
+++ b/arch/arm64/configs/aosp_tone_kagura_defconfig
@@ -469,7 +469,7 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_CMD_DEBUG=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_SD_DEFERRED_RESUME=y
-CONFIG_MMC_FFU=y
+CONFIG_MMC_UIM2TRAY_SUPPORT=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
