arm64: qcom: Add SONY Loire platform, msm8956 family
This is an initial bringup for Loire platform.

It contains various SOMC boards support, including:
* Xperia X (AX) - Suzu
* Xperia X (AX) Dual
* Xperia X Compact - Kugo

Contains the following commits:

ID: d32df3d02f8aafcc703e3f31f52c3d64d7a3ba33
Alin Jerpelea <alin.jerpelea@sonymobile.com>
Date: Tue, 13 Sep 2016 11:30:47 +0200
[PATCH] rework loire platform to add kugo device

add device configuration for Sony Xperia X Compact (kugo)

ID: 0bd4d876e56156ec9acb08d85b4d058fc2af2adf
Alin Jerpelea <alin.jerpelea@sonymobile.com>
Date: Fri, 8 Jul 2016 08:59:23 +0200
[PATCH] suzu: set camera sensor orientation

fix sensor orientation to macth the actual mount angles

ID: 0ed768b4b28045c83f23925da28d5a8d8f9cd7d8
Humberto Borba <humberos@gmail.com>
Date: Thu, 8 Sep 2016 16:23:26 -0300
[PATCH] arm64: DT: Loire: Disable wakeup gesture for now

This feature is causing suspend/resume problems for touchscreen.

So, this patch removes it for now and fix touchscreen issue while we
haven't the proper fix.

ID: bb79e6c7704c2d860b8a85f2ee0d4f900527d871
Humberto Borba <humberos@gmail.com>
Date: Sun, 4 Sep 2016 08:57:01 -0300
[PATCH] arm64: DT: suzu: Add missed batterydata entry

Add DT entry based on Z5 battery value.

    qcom,max-voltage-uv = <4350000>;

Fix kernel warning:

    FG: fg_batt_profile_init: couldn't find battery max voltage

ID: b635186ef2e4d13c12603637cee085ed7be9cbab
Alin Jerpelea <alin.jerpelea@sonymobile.com>
Date: Fri, 19 Aug 2016 16:27:36 +0200
[PATCH] dts: loire: fix LED naming

the LED name has to be consintent with the whole project
for the lights HAL

ID: 7deefa32ce3c3c0b61d938d6bbe214be3464456c
Humberto Borba <humberos@gmail.com>
Date: Sat, 30 Jul 2016 17:58:44 -0300
[PATCH] arm64: DT: loire: Fix BT gpio entry

It is required BT (bt_reg_on) gpio.

ID: 3aaf67831354357268fab1adc2be057f61abd867
"Angelo G. Del Regno" <kholk11@gmail.com>
Date: Fri, 8 Jul 2016 11:06:52 +0200
[PATCH] arm: DT: Suzu: Update regulat

--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -28,6 +28,10 @@ dtb-$(CONFIG_MACH_SONY_SATSUKI)		+= msm8994-v2.1-kitakami_satsuki_generic.dtb
 dtb-$(CONFIG_MACH_SONY_SATSUKI_DSDS)	+= msm8994-v2.0-kitakami_satsuki_dsds.dtb
 dtb-$(CONFIG_MACH_SONY_SATSUKI_DSDS)	+= msm8994-v2.1-kitakami_satsuki_dsds.dtb
 
+# MSM8956
+dtb-$(CONFIG_MACH_SONY_SUZU)		+= msm8956-v1.1-loire-suzu_generic.dtb
+dtb-$(CONFIG_MACH_SONY_KUGO)		+= msm8956-v1.1-loire-kugo_generic.dtb
+
 # MSM8939/MSM8936
 dtb-$(CONFIG_MACH_SONY_TULIP)		+= msm8936-kanuti_tulip.dtb
 dtb-$(CONFIG_MACH_SONY_TULIP)		+= msm8939-kanuti_tulip.dtb
