arm: DT: Tone: Declare display on DSI0 as primary
Our somc_panel driver wants to know about where is the primary
panel and where is the secondary one because, despite 3.18
has it basically deprecated, it still supports HDMI/MHL.

--- a/arch/arm/boot/dts/qcom/msm8996-tone-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-tone-common.dtsi
@@ -3679,6 +3679,7 @@
 };
 
 &mdss_dsi0 {
+	qcom,display-id = "primary";
 	qcom,dsi-pref-prim-pan = <&dsi_default_panel>;
 	pinctrl-names = "mdss_default", "mdss_sleep", "mdss_touch_active", "mdss_touch_suspend";
 	pinctrl-0 = <&mdss_dsi_active &mdss_te_active>;
