clk: msm: Add cpu and gcc clock controller drivers for MSM8976
Those two drivers never made it to 3.18, but we need those for
our devices running on MSM8956(/8976).

Add CPU clock controller and GCC clock controller drivers for
MSM8976 and MSM8956.

--- a/drivers/clk/msm/Makefile
+++ b/drivers/clk/msm/Makefile
@@ -46,6 +46,9 @@ obj-$(CONFIG_ARCH_MSM8974)	+= clock-krait-8974.o
 obj-$(CONFIG_ARCH_MSM8916)	+= clock-rpm-8936.o
 obj-$(CONFIG_ARCH_MSM8916)	+= clock-gcc-8936.o
 
+# MSM8976
+obj-$(CONFIG_ARCH_MSM8976)	+= clock-gcc-8976.o
+
 # ACPU clock
 obj-$(CONFIG_ARCH_MDM9640)      += clock-a7.o
 obj-$(CONFIG_ARCH_MDMCALIFORNIUM)	+= clock-a7.o
@@ -58,6 +61,7 @@ obj-$(CONFIG_ARCH_MSM8916)	+= clock-gcc-8952.o
 obj-$(CONFIG_ARCH_MSM8916)	+= clock-gcc-titanium.o
 obj-$(CONFIG_ARCH_MSM8916)	+= clock-rcgwr.o
 obj-$(CONFIG_ARCH_MSM8916)      += clock-cpu-titanium.o
+obj-$(CONFIG_ARCH_MSM8916)	+= clock-cpu-8976.o
 
 # ACPU: Krait specific
 obj-$(CONFIG_ARCH_MSM_KRAIT)	+= clock-krait.o
