--- a/arch/arm64/configs/aosp_tone_kagura_defconfig
+++ b/arch/arm64/configs/aosp_tone_kagura_defconfig
@@ -420,6 +420,7 @@ CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 CONFIG_MSM_JPEGDMA=y
 CONFIG_RADIO_SILABS=y
+CONFIG_MSM_KGSL_LEGACY=y
 CONFIG_MSM_KGSL=y
 CONFIG_FB=y
 CONFIG_FB_MSM=y
