--- a/arch/arm/boot/dts/qcom/msm8994-mdss-pll.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-mdss-pll.dtsi
@@ -31,7 +31,7 @@
 		clock-rate = <0>;
 
 		/* Dynamic FPS data region */
-		linux,contiguous-region = <&dfps_data_mem>;
+		memory-region = <&dfps_data_mem>;
 
 		qcom,platform-supply-entries {
 			#address-cells = <1>;
