--- a/arch/arm/boot/dts/qcom/msm8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994.dtsi
@@ -82,6 +82,7 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc0>;
 			qcom,ldo = <&ldo0>;
+			qcom,ea = <&ea0>;
 			qcom,limits-info = <&mitigation_profile0>;
 			qcom,sleep-status = <&cpu0_slp_sts>;
 			next-level-cache = <&L2_0>;
@@ -124,6 +125,7 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc1>;
 			qcom,ldo = <&ldo1>;
+			qcom,ea = <&ea1>;
 			qcom,limits-info = <&mitigation_profile1>;
 			qcom,sleep-status = <&cpu1_slp_sts>;
 			next-level-cache = <&L2_0>;
@@ -157,6 +159,7 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc2>;
 			qcom,ldo = <&ldo2>;
+			qcom,ea = <&ea2>;
 			qcom,limits-info = <&mitigation_profile2>;
 			qcom,sleep-status = <&cpu2_slp_sts>;
 			next-level-cache = <&L2_0>;
@@ -190,6 +193,7 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc3>;
 			qcom,ldo = <&ldo3>;
+			qcom,ea = <&ea3>;
 			qcom,limits-info = <&mitigation_profile3>;
 			qcom,sleep-status = <&cpu3_slp_sts>;
 			next-level-cache = <&L2_0>;
@@ -223,6 +227,7 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc4>;
 			qcom,ldo = <&ldo4>;
+			qcom,ea = <&ea4>;
 			qcom,limits-info = <&mitigation_profile4>;
 			qcom,sleep-status = <&cpu4_slp_sts>;
 			next-level-cache = <&L2_1>;
@@ -274,6 +279,7 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc5>;
 			qcom,ldo = <&ldo5>;
+			qcom,ea = <&ea5>;
 			qcom,limits-info = <&mitigation_profile5>;
 			qcom,sleep-status = <&cpu5_slp_sts>;
 			next-level-cache = <&L2_1>;
@@ -316,6 +322,7 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc6>;
 			qcom,ldo = <&ldo6>;
+			qcom,ea = <&ea6>;
 			qcom,limits-info = <&mitigation_profile6>;
 			qcom,sleep-status = <&cpu6_slp_sts>;
 			next-level-cache = <&L2_1>;
@@ -358,6 +365,7 @@
 			enable-method = "qcom,8994-arm-cortex-acc";
 			qcom,acc = <&acc7>;
 			qcom,ldo = <&ldo7>;
+			qcom,ea = <&ea7>;
 			qcom,limits-info = <&mitigation_profile7>;
 			qcom,sleep-status = <&cpu7_slp_sts>;
 			next-level-cache = <&L2_1>;
@@ -1365,76 +1373,80 @@
 		};
 
 	ufs1: ufshc@fc594000 {
-			compatible = "qcom,ufshc";
-			reg = <0xfc594000 0x2500>, <0xfd512074 0x4>;
-			interrupts = <0 265 0>;
-			phys = <&ufsphy1>;
-			phy-names = "ufsphy";
-			ufs-qcom-crypto = <&ufs_ice>;
-			vdd-hba-supply = <&gdsc_ufs>;
-			vdd-hba-fixed-regulator;
-			vcc-supply = <&pm8994_l20>;
-			vccq-supply = <&pm8994_l31>;
-			vccq2-supply = <&pm8994_s4>;
-			vcc-max-microamp = <750000>;
-			vccq-max-microamp = <50000>;
-			vccq2-max-microamp = <750000>;
+		compatible = "jedec,ufs-1.1";
+		reg = <0xfc594000 0x2500>, <0xfd512074 0x4>;
+		interrupts = <0 265 0>;
+		phys = <&ufsphy1>;
+		phy-names = "ufsphy";
+		ufs-qcom-crypto = <&ufs_ice>;
+		vdd-hba-supply = <&gdsc_ufs>;
+		vdd-hba-fixed-regulator;
+		vcc-supply = <&pm8994_l20>;
+		vccq-supply = <&pm8994_l31>;
+		vccq2-supply = <&pm8994_s4>;
+		vcc-max-microamp = <750000>;
+		vccq-max-microamp = <50000>;
+		vccq2-max-microamp = <750000>;
 
-			clock-names = "core_clk_src", "core_clk", "bus_clk", "iface_clk",
-			"ref_clk", "rx_lane0_sync_clk", "tx_lane0_sync_clk",
-			"rx_lane1_sync_clk", "tx_lane1_sync_clk";
-			clocks =
-			<&clock_gcc clk_ufs_axi_clk_src>,
-			<&clock_gcc clk_gcc_ufs_axi_clk>,
-			<&clock_gcc clk_gcc_sys_noc_ufs_axi_clk>,
-			<&clock_gcc clk_gcc_ufs_ahb_clk>,
-			<&clock_rpm clk_bb_clk1>,
-			<&clock_gcc clk_gcc_ufs_rx_symbol_0_clk>,
-			<&clock_gcc clk_gcc_ufs_tx_symbol_0_clk>,
-			<&clock_gcc clk_gcc_ufs_rx_symbol_1_clk>,
-			<&clock_gcc clk_gcc_ufs_tx_symbol_1_clk>;
-			qcom,msm-bus,name = "ufs1";
-			qcom,msm-bus,num-cases = <22>;
-			qcom,msm-bus,num-paths = <2>;
-			qcom,msm-bus,vectors-KBps =
-			<95 512 0 0>, <1 650 0 0>,          /* No vote */
-			<95 512 922 0>, <1 650 1000 0>,     /* PWM G1 */
-			<95 512 1844 0>, <1 650 1000 0>,    /* PWM G2 */
-			<95 512 3688 0>, <1 650 1000 0>,    /* PWM G3 */
-			<95 512 7376 0>, <1 650 1000 0>,    /* PWM G4 */
-			<95 512 1844 0>, <1 650 1000 0>,    /* PWM G1 L2 */
-			<95 512 3688 0>, <1 650 1000 0>,    /* PWM G2 L2 */
-			<95 512 7376 0>, <1 650 1000 0>,    /* PWM G3 L2 */
-			<95 512 14752 0>, <1 650 1000 0>,   /* PWM G4 L2 */
-			<95 512 127796 0>, <1 650 1000 0>,  /* HS G1 RA */
-			<95 512 255591 0>, <1 650 1000 0>,  /* HS G2 RA */
-			<95 512 511181 0>, <1 650 1000 0>,  /* HS G3 RA */
-			<95 512 255591 0>, <1 650 1000 0>,  /* HS G1 RA L2 */
-			<95 512 511181 0>, <1 650 1000 0>,  /* HS G2 RA L2 */
-			<95 512 1022362 0>, <1 650 1000 0>, /* HS G3 RA L2 */
-			<95 512 149422 0>, <1 650 1000 0>,  /* HS G1 RB */
-			<95 512 298189 0>, <1 650 1000 0>,  /* HS G2 RB */
-			<95 512 596378 0>, <1 650 1000 0>,  /* HS G3 RB */
-			<95 512 298189 0>, <1 650 1000 0>,  /* HS G1 RB L2 */
-			<95 512 596378 0>, <1 650 1000 0>,  /* HS G2 RB L2 */
-			<95 512 1192756 0>, <1 650 1000 0>, /* HS G3 RB L2 */
-			<95 512 4096000 0>, <1 650 1000 0>; /* Max. bandwidth */
-			qcom,bus-vector-names = "MIN",
-			"PWM_G1_L1", "PWM_G2_L1", "PWM_G3_L1", "PWM_G4_L1",
-			"PWM_G1_L2", "PWM_G2_L2", "PWM_G3_L2", "PWM_G4_L2",
-			"HS_RA_G1_L1", "HS_RA_G2_L1", "HS_RA_G3_L1",
-			"HS_RA_G1_L2", "HS_RA_G2_L2", "HS_RA_G3_L2",
-			"HS_RB_G1_L1", "HS_RB_G2_L1", "HS_RB_G3_L1",
-			"HS_RB_G1_L2", "HS_RB_G2_L2", "HS_RB_G3_L2",
-			"MAX";
+		clock-names = "core_clk_src", "core_clk", "bus_clk", "iface_clk",
+		"ref_clk", "rx_lane0_sync_clk", "tx_lane0_sync_clk",
+		"rx_lane1_sync_clk", "tx_lane1_sync_clk";
+		clocks =
+		<&clock_gcc clk_ufs_axi_clk_src>,
+		<&clock_gcc clk_gcc_ufs_axi_clk>,
+		<&clock_gcc clk_gcc_sys_noc_ufs_axi_clk>,
+		<&clock_gcc clk_gcc_ufs_ahb_clk>,
+		<&clock_rpm clk_bb_clk1>,
+		<&clock_gcc clk_gcc_ufs_rx_symbol_0_clk>,
+		<&clock_gcc clk_gcc_ufs_tx_symbol_0_clk>,
+		<&clock_gcc clk_gcc_ufs_rx_symbol_1_clk>,
+		<&clock_gcc clk_gcc_ufs_tx_symbol_1_clk>;
+		qcom,msm-bus,name = "ufs1";
+		qcom,msm-bus,num-cases = <22>;
+		qcom,msm-bus,num-paths = <2>;
+		qcom,msm-bus,vectors-KBps =
+		<95 512 0 0>, <1 650 0 0>,          /* No vote */
+		<95 512 922 0>, <1 650 1000 0>,     /* PWM G1 */
+		<95 512 1844 0>, <1 650 1000 0>,    /* PWM G2 */
+		<95 512 3688 0>, <1 650 1000 0>,    /* PWM G3 */
+		<95 512 7376 0>, <1 650 1000 0>,    /* PWM G4 */
+		<95 512 1844 0>, <1 650 1000 0>,    /* PWM G1 L2 */
+		<95 512 3688 0>, <1 650 1000 0>,    /* PWM G2 L2 */
+		<95 512 7376 0>, <1 650 1000 0>,    /* PWM G3 L2 */
+		<95 512 14752 0>, <1 650 1000 0>,   /* PWM G4 L2 */
+		<95 512 127796 0>, <1 650 1000 0>,  /* HS G1 RA */
+		<95 512 255591 0>, <1 650 1000 0>,  /* HS G2 RA */
+		<95 512 511181 0>, <1 650 1000 0>,  /* HS G3 RA */
+		<95 512 255591 0>, <1 650 1000 0>,  /* HS G1 RA L2 */
+		<95 512 511181 0>, <1 650 1000 0>,  /* HS G2 RA L2 */
+		<95 512 1022362 0>, <1 650 1000 0>, /* HS G3 RA L2 */
+		<95 512 149422 0>, <1 650 1000 0>,  /* HS G1 RB */
+		<95 512 298189 0>, <1 650 1000 0>,  /* HS G2 RB */
+		<95 512 596378 0>, <1 650 1000 0>,  /* HS G3 RB */
+		<95 512 298189 0>, <1 650 1000 0>,  /* HS G1 RB L2 */
+		<95 512 596378 0>, <1 650 1000 0>,  /* HS G2 RB L2 */
+		<95 512 1192756 0>, <1 650 1000 0>, /* HS G3 RB L2 */
+		<95 512 4096000 0>, <1 650 1000 0>; /* Max. bandwidth */
+		qcom,bus-vector-names = "MIN",
+		"PWM_G1_L1", "PWM_G2_L1", "PWM_G3_L1", "PWM_G4_L1",
+		"PWM_G1_L2", "PWM_G2_L2", "PWM_G3_L2", "PWM_G4_L2",
+		"HS_RA_G1_L1", "HS_RA_G2_L1", "HS_RA_G3_L1",
+		"HS_RA_G1_L2", "HS_RA_G2_L2", "HS_RA_G3_L2",
+		"HS_RB_G1_L1", "HS_RB_G2_L1", "HS_RB_G3_L1",
+		"HS_RB_G1_L2", "HS_RB_G2_L2", "HS_RB_G3_L2",
+		"MAX";
 
-			qcom,cpu-affinity = "affine_cores";
-			qcom,cpu-affinity-mask = <0xf>; /* little cluster */
-			qcom,cpu-dma-latency-us = <301>;
+		qcom,cpu-affinity = "affine_cores";
+		qcom,cpu-affinity-mask = <0xf>; /* little cluster */
+		qcom,cpu-dma-latency-us = <301>;
 
-			spm-level = <5>;
-			status = "disabled";
+		spm-level = <5>;
+		status = "disabled";
+
+		ufs_variant {
+			compatible = "qcom,ufs_variant";
 		};
+	};
 
 	spi_0: spi_epm: spi@f9923000 { /* BLSP1 QUP1 */
 		compatible = "qcom,spi-qup-v2";
@@ -1639,6 +1651,7 @@
 		status = "disabled";
 		reg = <0xf9200000 0xfc000>,
 			 <0xfd4ab000 0x4>;
+		reg-names = "core_base", "tcsr_base";
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
@@ -1658,6 +1671,7 @@
 		vbus_dwc3-supply = <&smbcharger_charger_otg>;
 		qcom,dwc-usb3-msm-tx-fifo-size = <29696>;
 		qcom,dwc-usb3-msm-qdss-tx-fifo-size = <8192>;
+		qcom,disable-host-mode-pm; /* for PMIC damage issue */
 		qcom,usb-dbm = <&dbm_1p5>;
 
 		qcom,msm-bus,name = "usb3";
@@ -1706,6 +1720,7 @@
 			qcom,usb-bam-override-threshold = <0x4001>;
 			qcom,usb-bam-max-mbps-highspeed = <400>;
 			qcom,usb-bam-max-mbps-superspeed = <3600>;
+			qcom,reset-bam-on-connect;
 
 			qcom,pipe0 {
 				label = "ssusb-ipa-out-0";
@@ -3501,42 +3516,42 @@
 		qcom,polling-interval = <50>;
 
 		qcom,core-mapping {
-			qcom,cpu0-chars {
+			ea0: qcom,cpu0-chars {
 				qcom,sensor = <&sensor_information7>;
 				qcom,cpu-name = <&CPU0>;
 			};
 
-			qcom,cpu1-chars {
+			ea1: qcom,cpu1-chars {
 				qcom,sensor = <&sensor_information8>;
 				qcom,cpu-name = <&CPU1>;
 			};
 
-			qcom,cpu2-chars {
+			ea2: qcom,cpu2-chars {
 				qcom,sensor = <&sensor_information9>;
 				qcom,cpu-name = <&CPU2>;
 			};
 
-			qcom,cpu3-chars {
+			ea3: qcom,cpu3-chars {
 				qcom,sensor = <&sensor_information10>;
 				qcom,cpu-name = <&CPU3>;
 			};
 
-			qcom,cpu4-chars {
+			ea4: qcom,cpu4-chars {
 				qcom,sensor = <&sensor_information13>;
 				qcom,cpu-name = <&CPU4>;
 			};
 
-			qcom,cpu5-chars {
+			ea5: qcom,cpu5-chars {
 				qcom,sensor = <&sensor_information14>;
 				qcom,cpu-name = <&CPU5>;
 			};
 
-			qcom,cpu6-chars {
+			ea6: qcom,cpu6-chars {
 				qcom,sensor = <&sensor_information15>;
 				qcom,cpu-name = <&CPU6>;
 			};
 
-			qcom,cpu7-chars {
+			ea7: qcom,cpu7-chars {
 				qcom,sensor = <&sensor_information6>;
 				qcom,cpu-name = <&CPU7>;
 			};
